--- a/Experiment-1/student_form.html
+++ b/Experiment-1/student_form.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: ;">Student Registration Form</h1>
+    <h1 >Student Registration Form</h1>
 
     <form action="/register" method="post">
         
