--- a/Experiment-2/Account_Balance.html
+++ b/Experiment-2/Account_Balance.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account Balance</title>
-    <link rel="stylesheet" href="style2.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Banking UI</title>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-
-    <div class="card">
-        <h1 class="balance">$0</h1>
-    </div>
-    <div>
-        <button class="deposit">Deposit</button>
-    </div>
-    <div>
-        <button class="withdraw">Withdraw</button>
-    </div>
-
+  <div class="outer-container">
+    <div class="balance">$0</div>
+    <button class="btn deposit">Deposit</button>
+    <button class="btn withdraw">Withdraw</button>
+  </div>
 </body>
 </html>
